--- a/stopwatch.html
+++ b/stopwatch.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- HEADER -->
-    <h1>Stopwatch</h1>
+    <h1>STOPWATCH</h1>
     <div class="homeContainer">
         <a href="./index.html">
             <div class="webLink">HOME</div>
