--- a/timer.html
+++ b/timer.html
@@ -13,7 +13,7 @@
     <!-- HEADER -->
 
     <audio id="beep" src="./assets/beep.mp3"></audio>
-    <h1>Timer</h1>
+    <h1>TIMER</h1>
     <div class="homeContainer">
         <a href="./index.html">
             <div class="webLink">HOME</div>
