--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Timer and Stopwatch</h1>
+    <h1>TIMER & STOPWATCH</h1>
     <div class="homeContainer">
         <a href="./stopwatch.html"><div class="webLink">STOPWATCH</div></a>
         <a href="./timer.html"><div class="webLink">TIMER</div></a>
